--- a/ui file/playfair.ui
+++ b/ui file/playfair.ui
@@ -410,6 +410,31 @@ p, li { white-space: pre-wrap; }
 &lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="UploadFile">
+    <property name="geometry">
+     <rect>
+      <x>700</x>
+      <y>160</y>
+      <width>191</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background: #D19B47;
+border-radius: 15px;
+
+font-style: normal;
+font-weight: 700;
+font-size: 14px;
+line-height: 49px;
+text-align: center;
+letter-spacing: 0.2em;
+color: #FFFFFF;</string>
+    </property>
+    <property name="text">
+     <string>Upload File</string>
+    </property>
+   </widget>
    <zorder>SpacingLabel</zorder>
    <zorder>ResultLabel</zorder>
    <zorder>keyLabel</zorder>
@@ -425,6 +450,7 @@ p, li { white-space: pre-wrap; }
    <zorder>encryptPushButton_2</zorder>
    <zorder>DecryptPushButton_2</zorder>
    <zorder>textBrowser_2</zorder>
+   <zorder>UploadFile</zorder>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
